--- a/IT_Consultancy.html
+++ b/IT_Consultancy.html
@@ -36,7 +36,7 @@
                             <h1>
                                 <a class="navbar-brand px-0 mx-0 logo1" href="index.html">
                                     <!-- <img src="images/logo/Elite logo .png" alt=""> -->
-                                <img src="images/logo/Artboard 52.png" alt="">
+                                    <img src="images/logo/Artboard 52.png" alt="">
 
                                 </a>
                             </h1>
@@ -75,10 +75,10 @@
                                     <li><a href="#" class="drop-text"> VMWare </a></li>
                                 </ul>
                             </li>
-                            <li><a href="#" >Customer</a></li>
-                        <li><a href="#"  >News</a></li>
-                        <!-- <li><a href="contact.html" target="_blank" >Career</a></li> -->
-                        <li><a href="contact.html" target="_blank" >Contact Us</a></li>
+                            <li><a href="#">Customer</a></li>
+                            <li><a href="#">News</a></li>
+                            <!-- <li><a href="contact.html" target="_blank" >Career</a></li> -->
+                            <li><a href="contact.html" target="_blank">Contact Us</a></li>
 
                             <!-- <li class="social-icons ml-lg-3"><a href="#" class="p-0 social-icon"><span
                                         class="fa fa-facebook-official" aria-hidden="true"></span>
@@ -128,9 +128,15 @@
                     solutions.
                 </p> -->
                 <br>
-                <h5 class="mb-4 wow fadeInLeft " data-wow-duration="2s">
-                    Project Planning and preparation :
-                </h5>
+                <ul class="mb-4 wow fadeInLeft " data-wow-duration="2s">
+                    <li class="mb-4 wow fadeInLeft " data-wow-duration="2s">
+                        <h5 class="mb-4 wow fadeInLeft " data-wow-duration="2s">
+                            Project Planning and preparation
+                        </h5>
+                    </li>
+
+                </ul>
+
             </div>
 
             <div class="clear"></div>
@@ -139,7 +145,7 @@
                 <div class="row">
                     <div class="col-lg-7 wow fadeInLeft " data-wow-duration="2s">
 
-                        <p class="sub-tittle mt-3 mb-4 pr-lg-5">
+                        <!-- <p class="sub-tittle mt-3 mb-4 pr-lg-5">
                             Remaining constantly connected has become an inevitable fact of our lives and businesses are
                             no
                             different. As businesses around world continue to move and to grow we acknowledge and
@@ -149,7 +155,7 @@
                             <br>
                             NSS have various kinds of competences including but not limited to IBM and CISCO products
                             and solutions. Our expertise and key focus solutions incorporate:
-                        </p>
+                        </p> -->
                         <!-- <p>
                             <ul class="ul_for_list">
                                 <li>Data Center</li>
@@ -167,21 +173,28 @@
                         </p> -->
                     </div>
                     <div class="col-lg-5">
-                        <div class="img_info_des wow fadeInLeft " data-wow-duration="2s">
+                        <!-- <div class="img_info_des wow fadeInLeft " data-wow-duration="2s">
                             <img src="images/banner1.jpeg" alt=" " class="img-fluid mt-5">
-                        </div>
+                        </div> -->
                     </div>
 
 
                 </div>
                 <hr>
+
                 <div class="row">
                     <div class="col-lg-7">
                         <br>
-                        <h5 class="mb-4 wow fadeInLeft " data-wow-duration="2s">
-                            Project Management Outsourcing :
-                        </h5>
-                        <p class="sub-tittle mt-3 mb-4 pr-lg-5 wow fadeInLeft " data-wow-duration="2s">
+                        <ul class="mb-4 wow fadeInLeft " data-wow-duration="2s">
+                            <li class="mb-4 wow fadeInLeft " data-wow-duration="2s">
+                                <h5 class="mb-4 wow fadeInLeft " data-wow-duration="2s">
+                                    Project Management Outsourcing
+                                </h5>
+
+                            </li>
+                        </ul>
+
+                        <!-- <p class="sub-tittle mt-3 mb-4 pr-lg-5 wow fadeInLeft " data-wow-duration="2s">
                             Remaining constantly connected has become an inevitable fact of our lives and businesses are
                             no
                             different. As businesses around world continue to move and to grow we acknowledge and
@@ -191,7 +204,7 @@
                             <br>
                             NSS have various kinds of competences including but not limited to IBM and CISCO products
                             and solutions. Our expertise and key focus solutions incorporate:
-                        </p>
+                        </p> -->
                         <!-- <p>
                                 <ul class="ul_for_list">
                                     <li>Data Center</li>
@@ -210,7 +223,7 @@
                     </div>
                     <div class="col-lg-5">
                         <div class="img_info_des wow fadeInLeft " data-wow-duration="2s">
-                            <img src="images/banner1.jpeg" alt=" " class="img-fluid mt-5">
+                            <img src="images/12.jpeg" alt=" " class="img-fluid mt-5">
                         </div>
                     </div>
 
@@ -220,11 +233,17 @@
                 <div class="row">
                     <div class="col-lg-7">
                         <br>
-                        <h5 class="mb-4 wow fadeInLeft " data-wow-duration="2s">
-                            PMO Office Establishment Consultancy :
-                        </h5>
+                        <ul class="mb-4 wow fadeInLeft " data-wow-duration="2s" >
+                            <li class="mb-4 wow fadeInLeft " data-wow-duration="2s" >
+                                <h5 class="mb-4 wow fadeInLeft " data-wow-duration="2s">
+                                    PMO Office Establishment Consultancy
+                                </h5>
 
-                        <p class="sub-tittle mt-3 mb-4 pr-lg-5 wow fadeInLeft " data-wow-duration="2s">
+
+                            </li>
+                        </ul>
+
+                        <!-- <p class="sub-tittle mt-3 mb-4 pr-lg-5 wow fadeInLeft " data-wow-duration="2s">
                             Remaining constantly connected has become an inevitable fact of our lives and businesses are
                             no
                             different. As businesses around world continue to move and to grow we acknowledge and
@@ -234,7 +253,7 @@
                             <br>
                             NSS have various kinds of competences including but not limited to IBM and CISCO products
                             and solutions. Our expertise and key focus solutions incorporate:
-                        </p>
+                        </p> -->
                         <!-- <p>
                                     <ul class="ul_for_list">
                                         <li>Data Center</li>
@@ -253,7 +272,7 @@
                     </div>
                     <div class="col-lg-5">
                         <div class="img_info_des wow fadeInLeft " data-wow-duration="2s">
-                            <img src="images/banner1.jpeg" alt=" " class="img-fluid mt-5">
+                            <img src="images/12.jpeg" alt=" " class="img-fluid mt-5">
                         </div>
                     </div>
 
@@ -339,15 +358,14 @@
                         </ul>
                     </div>
                 </div>
-               <div class="col-lg-4 mt-4 ad-info">
+                <div class="col-lg-4 mt-4 ad-info">
                     <h4 class="mb-4">Contact Info</h4>
                     <p><span class="fa fa-map-marker"></span>Saudi Arabia.</p>
                     <p class="phone"><span class="fa fa-phone"></span> +966 55 299 9240</p>
                     <p class="phone"><span class="fa fa-fax"></span> +966-0112490666 </p>
                     <p><span class="fa fa-envelope"></span><a href="#">info@eliteksa.net</a>
                     </p>
-                    <p><span class="fa fa-envelope"></span><a
-                            href="#">sales@eliteksa.net</a></p>
+                    <p><span class="fa fa-envelope"></span><a href="#">sales@eliteksa.net</a></p>
                 </div>
 
             </div>
