--- a/vue.html
+++ b/vue.html
@@ -10,7 +10,7 @@
     <meta name="keywords" content="" />
     <!-- //Meta tag Keywords -->
     <!-- Custom-Files -->
-     <link rel="stylesheet" href="css/bootstrap.css">
+    <link rel="stylesheet" href="css/bootstrap.css">
     <!-- animations  -->
     <link rel="stylesheet" href="css/animate.css">
     <!-- Bootstrap-Core-CSS -->
@@ -36,7 +36,7 @@
                             <h1>
                                 <a class="navbar-brand px-0 mx-0 logo1" href="index.html">
                                     <!-- <img src="images/logo/Elite logo .png" alt=""> -->
-                                <img src="images/logo/Artboard 52.png" alt="">
+                                    <img src="images/logo/Artboard 52.png" alt="">
 
                                 </a>
                             </h1>
@@ -54,7 +54,8 @@
                                 <input type="checkbox" id="drop-2" />
                                 <ul>
                                     <li><a href="Managed_Services.html" class="drop-text">Managed Services</a></li>
-                                    <li><a href="System_Integrator.html" class="drop-text">Network & DC Solution</a></li>
+                                    <li><a href="System_Integrator.html" class="drop-text">Network & DC Solution</a>
+                                    </li>
                                     <li><a href="IT_Consultancy.html" class="drop-text"> Project Management Consultancy
                                         </a></li>
                                     <li><a href="Contact_Center.html" class="drop-text"> Cyber Security Services</a>
@@ -74,10 +75,10 @@
                                     <li><a href="#" class="drop-text"> VMWare </a></li>
                                 </ul>
                             </li>
-                            <li><a href="#" >Customer</a></li>
-                        <li><a href="#"  >News</a></li>
-                        <!-- <li><a href="contact.html" target="_blank" >Career</a></li> -->
-                        <li><a href="contact.html" target="_blank" >Contact Us</a></li>
+                            <li><a href="#">Customer</a></li>
+                            <li><a href="#">News</a></li>
+                            <!-- <li><a href="contact.html" target="_blank" >Career</a></li> -->
+                            <li><a href="contact.html" target="_blank">Contact Us</a></li>
 
                             <!-- <li class="social-icons ml-lg-3"><a href="#" class="p-0 social-icon"><span
                                         class="fa fa-facebook-official" aria-hidden="true"></span>
@@ -118,44 +119,47 @@
     <section class="about py-5">
         <div class="container py-md-5">
             <div class="about-hny-info text-left pr-lg-5">
-                <h3 class="tittle-w3ls mb-3">VUE</h3>
-                <p class="sub-tittle mt-3 mb-4 pr-lg-5">
-                    Contact Center Company (CCC) is a leading customer experience management company, headquartered in
-                    Riyadh, Saudi Arabia. We are currently present in two strategic locations across KSA, with a
-                    stronghold of 4000+ employees of both genders and are backed
-                    by a strong financial stability and a high Saudization rate.
-                </p>
+                <h3 class="tittle-w3ls mb-3 wow fadeInLeft " data-wow-duration="1s"> VUE </h3>
+                <!-- <p class="sub-tittle mt-3 mb-4 pr-lg-5">
+                        As the industry’s premier technology integrator, we are also the leading provider of On Demand
+                        Business infrastructures, affording our customers customized technology integration packages to
+                        optimize their efficiency.
+                    </p> -->
             </div>
             <div class="clear"></div>
             <div class="container">
                 <div class="row">
-                    <div class="col-lg-7">
-                        <p class="sub-tittle mt-3 mb-4 pr-lg-5">
-                            Our differentiated innovation, agility, expertise and flawless execution enables us to
-                            deliver excellence in customer experiences and obtain high-performance results for our
-                            clients with every project we undertake.
+                    <div class="col-lg-7 wow fadeInLeft " data-wow-duration="2s">
+                        <p class="sub-tittle mt-3 mb-4 pr-lg-5 ">
+                            Elite is starting VUE Center for Individuals, government, Enterprises and professional
+                            testing programs targeting IT certifications .
+
+
                         </p>
-                        <h4>
-                            Our Background in Brief
-                        </h4>
-                        <p class="sub-tittle mt-3 mb-4 pr-lg-5">
-                            CCC is a joint-venture entity between Saudi Telecom (ELITEIT), the 10th largest telecom
-                            company in the world serving over 160 million customers in 7 different markets and the US
-                            based global Startek, a conglomerate customer experience management company,
-                            operating in 61 global locations for over 150 clients across diverse sectors. CCC stands as
-                            the industry forerunners as we leverage the domain experience of global Startek with strong
-                            local image of ELITEIT.
-                        </p>
+
+                       
+
                     </div>
                     <div class="col-lg-5">
-                        <div class="img_info_des">
-                            <img src="images/ab3.png" alt=" " class="img-fluid mt-5">
+                        <div class="img_info_des  wow fadeInLeft " data-wow-duration="2s">
+                            <img src="images/13.jpeg" alt=" " class="img-fluid mt-5">
                         </div>
                     </div>
 
 
                 </div>
-
+                <!-- <div class="row">
+                        <p class="sub-tittle mt-3 mb-4 pr-lg-5">
+                            Operational efficiency and business resiliency address these customers’ needs and become entry
+                            points to On Demand business. In times of tight budgets, businesses need to increase the value
+                            of their IT investments by optimizing assets and resources, managing
+                            costs and better aligning IT investments with their objectives. Other businesses may be focused
+                            on creating a more flexible infrastructure that delivers continuous business and IT operations,
+                            adapts quickly to change and protects
+                            operations. ITS can help customers make the improvements necessary to start the On Demand
+                            journey.
+                        </p>
+                    </div> -->
             </div>
 
         </div>
@@ -235,15 +239,14 @@
                         </ul>
                     </div>
                 </div>
-               <div class="col-lg-4 mt-4 ad-info">
+                <div class="col-lg-4 mt-4 ad-info">
                     <h4 class="mb-4">Contact Info</h4>
                     <p><span class="fa fa-map-marker"></span>Saudi Arabia.</p>
                     <p class="phone"><span class="fa fa-phone"></span> +966 55 299 9240</p>
                     <p class="phone"><span class="fa fa-fax"></span> +966-0112490666 </p>
                     <p><span class="fa fa-envelope"></span><a href="#">info@eliteksa.net</a>
                     </p>
-                    <p><span class="fa fa-envelope"></span><a
-                            href="#">sales@eliteksa.net</a></p>
+                    <p><span class="fa fa-envelope"></span><a href="#">sales@eliteksa.net</a></p>
                 </div>
 
             </div>
