--- a/Contact_Center.html
+++ b/Contact_Center.html
@@ -389,7 +389,7 @@
                     </li>
                     <li class="mb-4 wow fadeInLeft " data-wow-duration="1s">
                         <h3 class="mb-4 wow fadeInLeft " data-wow-duration="1s">
-                            Project Management Consultancy
+                            Project Management Consultancy :
                         </h3>
                         <ul class="ul_for_list">
                                 <li class="mb-4 wow fadeInLeft " data-wow-duration="1s">
@@ -439,6 +439,7 @@
                         <h3>
                                 Partners:
                         </h3>
+                        <br>
 
                         <ul class="ul_for_list">
                                 <li class="mb-4 wow fadeInLeft " data-wow-duration="1s">
