--- a/Managed_Services.html
+++ b/Managed_Services.html
@@ -53,15 +53,15 @@
                                 <a href="#">services <span class="fa fa-angle-down" aria-hidden="true"></span></a>
                                 <input type="checkbox" id="drop-2" />
                                 <ul>
-                                    <li><a href="Managed_Services.html"   class="drop-text">Managed Services</a></li>
-                                    <li><a href="System_Integrator.html"   class="drop-text">Network & DC Solution</a>
+                                    <li><a href="Managed_Services.html"        class="drop-text">Managed Services</a></li>
+                                    <li><a href="System_Integrator.html"       class="drop-text">Network & DC Solution</a>
                                     </li>
-                                    <li><a href="IT_Consultancy.html"   class="drop-text"> Project Management Consultancy
+                                    <li><a href="IT_Consultancy.html"         class="drop-text"> Project Management Consultancy
                                         </a></li>
-                                    <li><a href="Contact_Center.html"   class="drop-text"> Cyber Security Services</a>
+                                    <li><a href="Contact_Center.html"         class="drop-text"> Cyber Security Services</a>
                                     </li>
-                                    <li><a href="mobile app.html"   class="drop-text"> Mobile Apps </a></li>
-                                    <li><a href="vue.html"   class="drop-text">VUE Center</a></li>
+                                    <li><a href="mobile app.html"            class="drop-text"> Mobile Apps </a></li>
+                                    <li><a href="vue.html"                   class="drop-text">VUE Center</a></li>
                                 </ul>
                             </li>
 
@@ -81,7 +81,7 @@
                             <li><a href="#">News</a></li>
 
                             <!-- <li><a href="contact.html" target="_blank" >Career</a></li> -->
-                            <li><a href="contact.html" target="_blank">Contact Us</a></li>
+                            <li><a href="contact.html"  >Contact Us</a></li>
 
                             <!-- <li class="social-icons ml-lg-3"><a href="#" class="p-0 social-icon"><span
                                         class="fa fa-facebook-official" aria-hidden="true"></span>
