--- a/about.html
+++ b/about.html
@@ -58,7 +58,7 @@
                                     <li><a href="Managed_Services.html"   class="drop-text">Managed Services</a></li>
                                     <li><a href="System_Integrator.html"    class="drop-text">Network & DC Solution</a>
                                     </li>
-                                    <li><a href="IT_Consultancy.html"    class="drop-text"> Project Management Consultancy
+                                    <li><a href="project mangment.html"    class="drop-text"> Project Management Consultancy
                                         </a></li> 
                                     <li><a href="Contact_Center.html"   class="drop-text"> Cyber Security Services</a>
                                     </li>
