--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                                         Services</a></li>
                                 <li><a href="System_Integrator.html" target="_blank" class="drop-text">Network & DC
                                         Solution</a></li>
-                                <li><a href="IT_Consultancy.html" target="_blank" class="drop-text"> Project Management
+                                <li><a href="project mangment.html" target="_blank" class="drop-text"> Project Management
                                         Consultancy </a></li>
                                 <li><a href="Contact_Center.html" target="_blank" class="drop-text"> Cyber Security
                                         Services</a></li>
