--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                                         Solution</a></li>
                                 <li><a href="project mangment.html" target="_blank" class="drop-text"> Project Management
                                         Consultancy </a></li>
-                                <li><a href="Contact_Center.html" target="_blank" class="drop-text"> Cyber Security
+                                <li><a href="Cyber Security.html" target="_blank" class="drop-text"> Cyber Security
                                         Services</a></li>
                                 <li><a href="mobile app.html" target="_blank" class="drop-text"> Mobile Apps </a></li>
                                 <li><a href="vue.html" target="_blank" class="drop-text">VUE Center</a></li>
