--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                             <ul>
                                 <li><a href="Managed_Services.html" target="_blank" class="drop-text">Managed
                                         Services</a></li>
-                                <li><a href="System_Integrator.html" target="_blank" class="drop-text">Network & DC
+                                <li><a href="network.html" target="_blank" class="drop-text">Network & DC
                                         Solution</a></li>
                                 <li><a href="project mangment.html" target="_blank" class="drop-text"> Project Management
                                         Consultancy </a></li>
