System_Integrator.html edits

--- a/Managed_Services.html
+++ b/Managed_Services.html
@@ -54,7 +54,7 @@
                                 <input type="checkbox" id="drop-2" />
                                 <ul>
                                     <li><a href="Managed_Services.html"        class="drop-text">Managed Services</a></li>
-                                    <li><a href="network.html"       class="drop-text">Network & DC Solution</a>
+                                    <li><a href="System_Integrator.html"       class="drop-text">Network & DC Solution</a>
                                     </li>
                                     <li><a href="project mangment.html"         class="drop-text"> Project Management Consultancy
                                         </a></li>
