--- a/about.html
+++ b/about.html
@@ -56,7 +56,7 @@
                                 <input type="checkbox" id="drop-2" />
                                 <ul>
                                     <li><a href="Managed_Services.html"   class="drop-text">Managed Services</a></li>
-                                    <li><a href="network.html"    class="drop-text">Network & DC Solution</a>
+                                    <li><a href="System_Integrator.html"    class="drop-text">Network & DC Solution</a>
                                     </li>
                                     <li><a href="project mangment.html"    class="drop-text"> Project Management Consultancy
                                         </a></li> 
