IT_Consultancy.html edits

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                                 <li><a href="System_Integrator.html" target="_blank" class="drop-text">Network & DC
                                         Solution</a></li>
 
-                                <li><a href="project mangment.html" target="_blank" class="drop-text"> Project Management
+                                <li><a href="IT_Consultancy.html" target="_blank" class="drop-text"> Project Management
                                         Consultancy </a></li>
 
                                 <li><a href="Cyber Security.html" target="_blank" class="drop-text"> Cyber Security
