--- a/index.html
+++ b/index.html
@@ -359,7 +359,7 @@
                     <div class="card wow fadeInLeft " data-wow-duration="2s">
                         <div class="face face1">
                             <div class="content">
-                                <img src="images/banner1.jpeg" alt="">
+                                 <img src="images/133.jpeg" alt="">
                                 <h3> Network & DC Solution</h3>
                             </div>
                         </div>
