--- a/System_Integrator.html
+++ b/System_Integrator.html
@@ -158,7 +158,7 @@
                     </div>
                     <div class="col-lg-5">
                         <div class="img_info_des  wow fadeInLeft " data-wow-duration="2s" >
-                            <img src="images/banner1.jpeg" alt=" " class="img-fluid mt-5">
+                            <img src="images/133.jpeg" alt=" " class="img-fluid mt-5">
                         </div>
                     </div>
 
