--- a/index.html
+++ b/index.html
@@ -178,8 +178,8 @@
 
     <!-- about -->
     <section class="about py-5">
-        <div class="container p-md-5">
-            <div class="about-hny-info text-left px-md-5">
+        <div class="container ">
+            <div class="about-hny-info text-left ">
                 <h3 class="tittle-w3ls mb-3 wow fadeInLeft " data-wow-duration="1s"><span class="pink">Who</span> we are
                 </h3>
                 <p class="sub-tittle mt-3 mb-4 wow fadeInLeft " data-wow-duration="2s">
