--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
         <div class="container py-md-5">
             <div class="about-hny-info text-left pr-lg-5">
                 <h3 class="tittle-w3ls mb-3 wow fadeInLeft" data-wow-duration="1s">Our Divisions</h3> <br> <br>
-                <h5 class="mb-4 wow fadeInLeft " data-wow-duration="1s">
+                <h5 class="  pd-left wow fadeInLeft " data-wow-duration="1s">
                     Medical Supplies :
                 </h5>
                 <!-- <p class="sub-tittle mt-3 mb-4 pr-lg-5">
@@ -211,7 +211,7 @@
                 </p> -->
             </div>
             <div class="clear"></div>
-            <div class="container">
+            <div >
                 <div class="row">
                     <div class="col-lg-7">
                         <p class="sub-tittle mt-3 mb-4 pr-lg-5 wow fadeInLeft " data-wow-duration="2s">
@@ -259,7 +259,7 @@
     <!--services-->
     <section class="team banner_bottom py-5 " id="about">
         <div class="container ">
-            <h5 class="mb-4 wow fadeInLeft " data-wow-duration="1s">
+            <h5 class=" pd-left wow fadeInLeft " data-wow-duration="1s">
                 Information Technology Services and Consultancy :
             </h5>
             <!-- <div class="row mt-lg-5 mt-4">
