--- a/index.html
+++ b/index.html
@@ -53,21 +53,21 @@
                             <a href="#">services <span class="fa fa-angle-down" aria-hidden="true"></span></a>
                             <input type="checkbox" id="drop-2" />
                             <ul>
-                                <li><a href="Managed_Services.html" target="_blank" class="drop-text">Managed
+                                <li><a href="Managed_Services.html"  class="drop-text">Managed
                                         Services</a></li>
 
-                                <li><a href="System_Integrator.html" target="_blank" class="drop-text">Network & DC
+                                <li><a href="System_Integrator.html"  class="drop-text">Network & DC
                                         Solution</a></li>
 
-                                <li><a href="IT_Consultancy.html" target="_blank" class="drop-text"> Project Management
+                                <li><a href="IT_Consultancy.html"  class="drop-text"> Project Management
                                         Consultancy </a></li>
 
-                                <li><a href="Contact_Center.html" target="_blank" class="drop-text"> Cyber Security
+                                <li><a href="Contact_Center.html"  class="drop-text"> Cyber Security
                                         Services</a></li>
 
-                                <li><a href="mobile app.html" target="_blank" class="drop-text"> Mobile Apps </a></li>
+                                <li><a href="mobile app.html"  class="drop-text"> Mobile Apps </a></li>
                                 
-                                <li><a href="vue.html" target="_blank" class="drop-text">VUE Center</a></li>
+                                <li><a href="vue.html"  class="drop-text">VUE Center</a></li>
                             </ul>
                         </li>
                         <li>
