--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                     <input type="checkbox" id="drop" />
                     <ul class="menu mr-auto">
                         <li class="active"><a href="index.html">Home</a></li>
-                        <li><a href="about.html" target="_blank">About Us</a></li>
+                        <li><a href="about.html"  >About Us</a></li>
                         <li>
                             <label for="drop-2" class="toggle toggle-2">services <span class="fa fa-angle-down"
                                     aria-hidden="true"></span> </label>
@@ -89,7 +89,7 @@
                         <li><a href="#">News</a></li>
 
                         <!-- <li><a href="contact.html" target="_blank" >Career</a></li> -->
-                        <li><a href="contact.html" target="_blank">Contact Us</a></li>
+                        <li><a href="contact.html"  >Contact Us</a></li>
 
                         <!--  <li class="social-icons ml-lg-3"><a href="#" class="p-0 social-icon"><span
                                     class="fa fa-facebook-official" aria-hidden="true"></span>
