--- a/Managed_Services.html
+++ b/Managed_Services.html
@@ -145,7 +145,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-lg-7 comp   wow fadeInLeft " data-wow-duration="2s">
-                      
+
                         <p>
                             The complete IT Service Management solution with Asset Management, Incident Management,
                             CMDB, CSAT,
@@ -182,7 +182,7 @@
                 </h5>
 
                 <div class="row">
-                    <div class="col-lg-7  wow fadeInLeft " data-wow-duration="2s">
+                    <div class="col-lg-7 mezo  wow fadeInLeft " data-wow-duration="2s">
                         <!-- <p>
 
                             Consult :
@@ -238,15 +238,18 @@
                             entire lifespan of the technology; from assessment and strategy & design, to implementation
                             and operational services.
                         </p> -->
-                        <p>
-                            <ul class="ul_for_list">
-                                <li> SIEM with 24*7 Mentoring building Process and Procedures and Risk assessment.</li>
-                                <li>Vulnerability Management & PEN Test once Per Quarter.</li>
-                                <li>IDS (Host Based for All Servers), Advanced Server Protection; (Analytics, Patching,
-                                    AntiX).</li>
-                                <li> Hardening Security Devices, Threat Management, Social Media Tools, Brand/Name
-                                    Protection</li>
-                            </ul>
+                        <p  >
+
+                            SIEM with 24*7 Mentoring building Process and Procedures and Risk assessment.
+                            <br>
+                            Vulnerability Management & PEN Test once Per Quarter.
+                            <br>
+                            IDS (Host Based for All Servers), Advanced Server Protection; (Analytics, Patching,
+                            AntiX).
+                            <br>
+                            Hardening Security Devices, Threat Management, Social Media Tools, Brand/Name
+                            Protection
+
                         </p>
 
                     </div>
@@ -265,17 +268,11 @@
                 <h5 class="mb-4 wow fadeInLeft " data-wow-duration="2s">
                     Call center :
                 </h5>
-                <p>
+                <p class=" wow center fadeInLeft " data-wow-duration="2s">
+                    At KSA
+                    <br>
 
-
-                    <ul class="ul_for_list wow fadeInLeft " data-wow-duration="2s">
-                        <li>At KSA
-
-                        </li>
-                        <li>At Egypt
-
-                        </li>
-                    </ul>
+                    At Egypt
                 </p>
 
 
