--- a/contact.html
+++ b/contact.html
@@ -159,12 +159,12 @@
 
                         </form>
                     </div>
-                    <div class="map-w3pvt mt-5 wow fadeInLeft " data-wow-duration="2s ">
+                    <!-- <div class="map-w3pvt mt-5 wow fadeInLeft " data-wow-duration="2s ">
                         <iframe
                             src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d14300.388413872768!2d43.9539099!3d26.3557211!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x29681c933a4e3481!2z2KfZhNil2YTZg9iq2LHZiNmG2YrYp9iqINin2YTZhdiq2YXZitiy2Kkg2KfZhNin2YXZhtmK2KkgUFJFTUlVTQ!5e0!3m2!1sar!2seg!4v1556110886735!5m2!1sar!2seg"
                             width="600" height="615" frameborder="0" style="border:0" allowfullscreen></iframe>
 
-                    </div>
+                    </div> -->
                 </div>
             </div>
         </div>
