--- a/about.html
+++ b/about.html
@@ -143,7 +143,7 @@
                 <div class="about-hny-info text-left pr-lg-5 ">
                     <h3 class="tittle-w3ls mb-3 wow fadeInLeft " data-wow-duration="2s "><span class="pink">Our</span>
                         Vision</h3>
-                    <p class="sub-tittle mt-3 mb-4 pr-lg-5 wow fadeInLeft " data-wow-duration="2s">
+                    <p class="sub-tittle medo mt-3 mb-4 pr-lg-5 wow fadeInLeft " data-wow-duration="2s">
                         We will seek by the help of god to prove existence through our business and allianes with
                         national and international companies in order to achieve our goals and satisfy our customers and
                         commitment to the highest performance and the lowest cost according
