--- a/about.html
+++ b/about.html
@@ -55,15 +55,15 @@
                                 <a href="#">services <span class="fa fa-angle-down" aria-hidden="true"></span></a>
                                 <input type="checkbox" id="drop-2" />
                                 <ul>
-                                    <li><a href="Managed_Services.html"   class="drop-text">Managed Services</a></li>
-                                    <li><a href="System_Integrator.html"    class="drop-text">Network & DC Solution</a>
+                                    <li><a href="Managed_Services.html" class="drop-text">Managed Services</a></li>
+                                    <li><a href="System_Integrator.html" class="drop-text">Network & DC Solution</a>
                                     </li>
-                                    <li><a href="IT_Consultancy.html"    class="drop-text"> Project Management Consultancy
-                                        </a></li> 
-                                    <li><a href="Contact_Center.html"   class="drop-text"> Cyber Security Services</a>
+                                    <li><a href="IT_Consultancy.html" class="drop-text"> Project Management Consultancy
+                                        </a></li>
+                                    <li><a href="Contact_Center.html" class="drop-text"> Cyber Security Services</a>
                                     </li>
-                                    <li><a href="mobile app.html"    class="drop-text"> Mobile Apps </a></li>
-                                    <li><a href="vue.html"    class="drop-text">VUE Center</a></li>
+                                    <li><a href="mobile app.html" class="drop-text"> Mobile Apps </a></li>
+                                    <li><a href="vue.html" class="drop-text">VUE Center</a></li>
                                 </ul>
                             </li>
                             <li>
@@ -139,19 +139,22 @@
     <!--/ab-->
     <section class="banner_bottom ">
         <div class="container py-md-5 ">
-            <div class="row inner_sec_info">
-                <div class="about-hny-info text-left pr-lg-5 ">
-                    <h3 class="tittle-w3ls mb-3 wow fadeInLeft " data-wow-duration="2s "><span class="pink">Our</span>
-                        Vision</h3>
-                    <p class="sub-tittle medo mt-3 mb-4 pr-lg-5 wow fadeInLeft " data-wow-duration="2s">
-                        We will seek by the help of god to prove existence through our business and allianes with
-                        national and international companies in order to achieve our goals and satisfy our customers and
-                        commitment to the highest performance and the lowest cost according
-                        to the schedule.
 
-                </div>
+            <div class="about-hny-info text-left pr-lg-5 ">
+                <h3 class="tittle-w3ls mb-3 wow fadeInLeft " data-wow-duration="2s "><span class="pink">Our</span>
+                    Vision
+                </h3>
 
+                <p class="sub-tittle mt-3 mb-4 pr-lg-5 wow fadeInLeft " data-wow-duration="2s">
+                    We will seek by the help of god to prove existence through our business and allianes with
+                    national and international companies in order to achieve our goals and satisfy our customers and
+                    commitment to the highest performance and the lowest cost according
+                    to the schedule.
+
+                </p>
             </div>
+
+
 
         </div>
     </section>
@@ -159,7 +162,9 @@
         <div class="container py-md-5 ">
             <div class="about-hny-info text-left pr-lg-5 ">
                 <h3 class="tittle-w3ls mb-3 wow fadeInLeft " data-wow-duration="2s "><span class="pink">Our</span>
-                    Mission</h3>
+                    Mission
+                </h3>
+
                 <p class="sub-tittle mt-3 mb-4 pr-lg-5 wow fadeInLeft " data-wow-duration="2s">
                     We are not alone but nique, Perfection is our goal deeloping and training are our way.
                     Offering customers our services and upgrading the level of technical and technology support to
@@ -255,8 +260,7 @@
                     <p class="phone"><span class="fa fa-fax"></span> +966-0112490666 </p>
                     <p><span class="fa fa-envelope"></span><a href="#">info@eliteksa.net</a>
                     </p>
-                    <p><span class="fa fa-envelope"></span><a
-                            href="#">sales@eliteksa.net</a></p>
+                    <p><span class="fa fa-envelope"></span><a href="#">sales@eliteksa.net</a></p>
                 </div>
 
             </div>
