--- a/about.html
+++ b/about.html
@@ -128,7 +128,7 @@
                     Elite Networks Company, Saudi Company Founded by Saudi Entrepreneur to Introduce High Quality
                     Services in Multiple Fields.
                     We are Partners and Authorized Distributors for many of the International Brands in Different
-                    Industries
+                    Industries.
 
                 </p>
             </div>
@@ -148,7 +148,7 @@
                 <p class="sub-tittle mt-3 mb-4 pr-lg-5 wow fadeInLeft " data-wow-duration="2s">
                     We will seek by the help of god to prove existence through our business and allianes with
                     national and international companies in order to achieve our goals and satisfy our customers and
-                    commitment to the highest performance and the lowest cost according
+                    commitment to the highest performance and the lowest cost according.
                     to the schedule.
 
                 </p>
